--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,14 +7,16 @@
 <body>
   <h1>Music Playlist Manager</h1>
   <ul>
-    <li><a href="/songs/add">Add a New Song</a></li>
-    <li><a href="/playlists/add">Add a New Playlist</a></li>
-    <li><a href="/users/add">Add a New User</a></li>
-    <li><a href="/artists/add">Add a New Artist</a></li>
-    <li><a href="/songs">View All Songs</a></li>
-    <li><a href="/users">View Users</a></li>
-    <li><a href="/playlists">View Playlists</a></li>
-    <li><a href="/artists">View Artists</a></li>
+    <ul>
+    <li><a href="/users">Users</a></li>
+    <li><a href="/artists">Artists</a></li>
+    <li><a href="/songs">Songs</a></li>
+    <li><a href="/playlists">Playlists</a></li>
+    <li><a href="/playlistsong">Playlist → Song</a></li>
+    <li><a href="/usersong">User → Song</a></li>
+    <li><a href="/artistsong">Artist → Song</a></li>
+  </ul>
+
   </ul>
 </body>
 </html>
