--- a/views/artists.hbs
+++ b/views/artists.hbs
@@ -7,12 +7,28 @@
 <body>
   <h1>All Artists</h1>
 
+  <h2>Add New Artist</h2>
+  <form action="/artists/add" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" name="name" required>
+
+    <label for="country">Country:</label>
+    <input type="text" name="country" required>
+
+    <label for="debutYear">Debut Year:</label>
+    <input type="number" name="debutYear" required>
+
+    <button type="submit">Add Artist</button>
+  </form>
+
+  <h2>Existing Artists</h2>
   <table border="1" cellpadding="5">
     <thead>
       <tr>
         <th>Name</th>
         <th>Country</th>
         <th>Debut Year</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -21,6 +37,11 @@
         <td>{{this.name}}</td>
         <td>{{this.country}}</td>
         <td>{{this.debutYear}}</td>
+        <td>
+          <form action="/artists/delete/{{this.artistID}}" method="POST" style="display:inline;">
+            <button type="submit" onclick="return confirm('Are you sure you want to delete this artist?');">Delete</button>
+          </form>
+        </td>
       </tr>
       {{/each}}
     </tbody>
