--- a/views/songs.hbs
+++ b/views/songs.hbs
@@ -7,6 +7,24 @@
 <body>
   <h1>All Songs</h1>
 
+  <h2>Add New Song</h2>
+  <form action="/songs/add" method="POST">
+    <label for="title">Title:</label>
+    <input type="text" name="title" required>
+
+    <label for="duration">Duration:</label>
+    <input type="text" name="duration" required>
+
+    <label for="releaseDate">Release Date:</label>
+    <input type="date" name="releaseDate" required>
+
+    <label for="genre">Genre:</label>
+    <input type="text" name="genre" required>
+
+    <button type="submit">Add Song</button>
+  </form>
+
+  <h2>Existing Songs</h2>
   <table border="1" cellpadding="5">
     <thead>
       <tr>
@@ -14,6 +32,7 @@
         <th>Duration</th>
         <th>Release Date</th>
         <th>Genre</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -23,6 +42,11 @@
         <td>{{this.duration}}</td>
         <td>{{this.releaseDate}}</td>
         <td>{{this.genre}}</td>
+        <td>
+          <form action="/songs/delete/{{this.songID}}" method="POST" style="display:inline;">
+            <button type="submit" onclick="return confirm('Are you sure you want to delete this song?');">Delete</button>
+          </form>
+        </td>
       </tr>
       {{/each}}
     </tbody>
